
Directory etc/repositories.d
 platform-acp.pack         Locally Modified          470 
 platform-usrp.pack        Locally Added               0 
 leap.pack                 Locally Modified          470 

Updated pack files to reflect 11.09 release and added pack
file for usrp platform.

----------
emer        Date: Thu Sep 29 20:56:26 EDT 2011  CSN: CSN-awb-472
                  Fri Sep 30 00:56:26 UTC 2011


Directory debian
 control                   Locally Modified          471 
 changelog                 Locally Modified          471 

Directory .
 README.debian             Locally Modified          471 

Make debian package depend on:
         subversion
         git-core
         libterm-readline-gnu-perl

----------
emer        Date: Sat Oct  1 15:29:44 EDT 2011  CSN: CSN-awb-473
                  Sat Oct  1 19:29:44 UTC 2011


Directory debian
 changelog                 Locally Modified          472 

Directory libperl/AsimShell/lib/AsimShell
 Commands.pm               Locally Modified          472 

Directory libperl/AsimShell/lib
 AsimShell.pm              Locally Modified          472 

Added a --long option to the awb-shell list packages
command.

----------
jsemer      Date: Thu Oct  6 00:13:49 EDT 2011  CSN: CSN-awb-477
                  Thu Oct  6 04:13:49 UTC 2011


Directory libperl/Asim/lib/Asim
 Model.pm                  Locally Modified          476 

Improved behavior of parameters of submodels. New behavior is
related to the default value of a submodel parameter as seen by
the parent model, i.e., the value of 'global' parameter in the 
submodel. Previously, that value was taken only from the module's 
.awb file. Now that default value may be taken from an override of 
the parameter value in the submodel. This saves a lot of writing 
of parameter values in the parent model's .apm file, and allows 
the value of a submodel parameter to be changed in all model's 
that use the submodel simply by changing the value in the submodel.