@@ -18,7 +18,7 @@
 #
 [Global]
 Description=Architects Workbench
-CSN=CSN-awb-477
+CSN=CSN-awb-478
 Name=awb
 Tag=HEAD
 Lock=asim-asimcore
